--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -2,25 +2,123 @@
 
 {% block body %}
 
-    <div class="row card">
-        <div class="_col-md-4">
-            <div class="card-head">
-                <header>Пополнить</header>
-            </div>
-            <div class="card-body height-8">
-                <center>
-                    <form method="post" action="{{ path('app_admin_add_confirm') }}">
-                        <div class="form-row">
-                            <div class="form-group _col-md-6">
-                                <label for="inputEmail4">Сума пополнения</label>
-                                <input type="number" min="100.00" max="1000000.00" step="0.01" class="form-control"  name="money"  placeholder="$">
+
+
+
+
+
+
+
+
+
+
+<div class="row card" style="
+    top: 11px;
+    margin-left: 11px;
+    margin-right: 11px;
+">
+    <div class="_col-md-6">
+        <div class="card tabs-left style-default-light">
+            <ul class="card-head nav nav-tabs" data-toggle="tabs">
+                <li class=""> <a href="#first5"> <i class="fa fa-money"></i>  24paybank  </a></li>
+                <li class="active"><a href="#second5">  <i class="fa fa-money"></i> payeer </a></li>
+                {#<li class=""><a href="#third5">THE THIRD</a></li>#}
+            </ul>
+            <div class="card-body tab-content style-default-bright">
+                <div class="tab-pane" id="first5">
+
+
+
+
+
+                    <div class="row card">
+                        <div class="_col-md-4">
+                            <div class="card-head">
+                                <header> Пополнить банковской картой <img style=" width: 100px;" src="https://24paybank.org/res/24paybank/i/logo.png" alt="Обменник" title="Обменять"/> </header>
                             </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary"> Дальше </button>
-                    </form>
-                </center>
+                            <div class="card-body height-8">
+                                <center>
+                                    <form method="post" action="#{{ path('app_admin_add_confirm') }}">
+                                        <div class="form-row">
+                                            <div class="form-group _col-md-6">
+                                                <label for="inputEmail4">Сума пополнения</label>
+                                                <input disabled type="number" min="100.00" max="1000000.00" step="0.01" class="form-control"  name="money"  placeholder="$">
+                                            </div>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary"> Дальше </button>
+                                    </form>
+                                </center>
+                            </div><!--end .card-body -->
+                        </div><!--end .col -->
+                    </div>
+
+
+
+
+                    {#<strong>#}
+                        {#<span>Кошелёк для получения , будет предоставлен по запросу в чате </span>#}
+                        {#<button onclick="alert('заявка отправлена в работу занимает около 24 часов');"> Получить номер кушелька </button>#}
+
+
+                    {#</strong>#}
+
+
+                    {#<br />#}
+
+
+                    {#<strong>#}
+                        {#<span> В разработке  </span> <br />#}
+                        {#скоро Вы сможете делать оплаты банковской картой#}
+                    {#</strong>#}
+
+
+                    {#<br />#}
+
+
+                    {#<a href="https://24paybank.org/?rid=15619056314142">#}
+                        {#<img src="https://24paybank.org/res/24paybank/banners/24paybank/240x100.jpg" alt="Обменник" title="Обменять"/>#}
+                    {#</a>#}
+
+
+                </div>
+                <div class="tab-pane active" id="second5">
+
+                    <div class="row card">
+                        <div class="_col-md-4">
+                            <div class="card-head">
+                                <header>Пополнить <img src="/main/img/payeer.png" style=" width: 100px;"> </header>
+                            </div>
+                            <div class="card-body height-8">
+                                <center>
+                                    <form method="post" action="{{ path('app_admin_add_confirm') }}">
+                                        <div class="form-row">
+                                            <div class="form-group _col-md-6">
+                                                <label for="inputEmail4">Сума пополнения</label>
+                                                <input type="number" min="100.00" max="1000000.00" step="0.01" class="form-control"  name="money"  placeholder="$">
+                                            </div>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary"> Дальше </button>
+                                    </form>
+                                </center>
+                            </div><!--end .card-body -->
+                        </div><!--end .col -->
+                    </div>
+
+                </div>
+
             </div><!--end .card-body -->
-        </div><!--end .col -->
+        </div><!--end .card -->
+        {#<em class="text-caption">000000000</em>#}
     </div>
+</div>
+
+
+
+
+
+
+
+
+
 
 {% endblock %}
