--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -34,10 +34,17 @@
                     <div class="row card">
                         <div class="_col-md-4">
                             <div class="card-head">
-                                <header> Пополнить банковской картой <img style=" width: 100px;" src="https://24paybank.org/res/24paybank/i/logo.png" alt="Обменник" title="Обменять"/> </header>
+
+                                <header> Пополнить <img style=" width: 100px;" src="https://24paybank.org/res/24paybank/i/logo.png" alt="Обменник" title="Обменять"/> </header>
+
+
                             </div>
                             <div class="card-body height-8">
                                 <center>
+
+                                    <span class="badge style-danger pull-right" style="background-color: #f44336;"> Пополнить банковской картой - в разработке </span>
+
+
                                     <form method="post" action="#{{ path('app_admin_add_confirm') }}">
                                         <div class="form-row">
                                             <div class="form-group _col-md-6">
