--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -295,6 +295,24 @@
 
 
 
+                                    <div class="progress progress-hairline">
+                                        <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
+                                    </div>
+                                    Фондовый <strong id="balance-five">{{ report.five }}</strong> USD
+
+
+                                    <span class="pull-right text-success text-sm">
+
+                                        {#<a href="/admin/statistics/3/" style="top: 11px;">#}
+                                            {#<span class="badge style-danger pull-right" style="background-color: #49a99e;">#}
+                                                 {#Статистика <i class="md md-trending-up"></i>#}
+                                            {#</span>#}
+                                        {#</a>#}
+
+                                    </span>
+
+
+
 
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-danger" style="width:0%"></div>
