--- a/templates/admin/adminAdmin.html.twig
+++ b/templates/admin/adminAdmin.html.twig
@@ -36,7 +36,7 @@
 
 
                             {% for user in productUsers %}
-                                <tr>
+                                <tr style="cursor: pointer;" onclick="location.href='/admin/root/user/{{ user.id|e }}' ">
                                     <td> {{ user.id|e }} </td>
                                     <td> {{ user.referralLink|e }} </td>
                                     <td> {{ user.isverify|e }} </td>
