Роботизированная Торговля - delete

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -240,7 +240,7 @@
                     <div class="wow bounceInUp" data-wow-delay="0.8s">
                         <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner"  onclick="location.href='/#contact'"  style="cursor: pointer">
-                                <h5>Портфель 4 <br /> «Гарантированный-20»</h5><br />
+                                <h5>Портфель 4 <br /> «Хэдж-фонд»</h5><br />
                                 {#<p class="subtitle">jQuery Ninja</p>#}
                                 <div class="avatar">
                                     <center>
