--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -553,7 +553,7 @@
                     <!--start submenu -->
                     <ul>
                         <li><a href="/services/individual-management">Фондовая торговля </a></li>
-                        <li><a href="/services/robotic-trading">Роботизированная торговля</a></li>
+                        {#<li><a href="/services/robotic-trading">Роботизированная торговля</a></li>#}
                         <li><a href="/services/ipo">Американские первичные акции (IPO)</a></li>
                         <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Тайланда</a></li>
                         {#<li><a href="/services/cars">Доходные автомобили Тайланда</a></li>#}
