--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -45,7 +45,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="wow bounceInDown" data-wow-delay="0.4s">
                             <div class="section-heading">
-                                <h4>Иивестируйте в активы с высоким потенциалом роста </h4>
+                                <h4>Ивестируйте в активы с высоким потенциалом роста </h4>
                                 <i class="fa fa-2x fa-angle-down"></i>
                                 <br/>
                                 <p>Проинвестировать</p>
