https://pay.mkb.ru/

--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -47,15 +47,49 @@
                                 <center>
 
 
-<p>Внимание! Для совершения обмена в данном направлении требуется верификация карты. Выполнение этого правила необходимо, чтобы мошенники не совершали переводы без согласия владельца карты. Процесс верификации займет несколько минут и требуется лишь единожды на каждую новую карту.</p>
-<p><b> Требование к фотографии: </b></p>
-<p><b> На фотографии карты должно быть видно первые и последние 4 цифры карты, а также ФИО владельца, если карта именная. Остальные данные можно закрыть </b></p>
-<p><b> На заднем фоне (за картой) должен быть виден монитор с открытой вкладкой сайта http://globalbigbell.com  </b></p>
-<p><b> Bыслать все документы на адрес globalbigbell@rambler.ru с email с которого вы зарегестрировались в системе  </b></p>
 
-       <p><b> Также необходимо выполнить  верификацию аккаунта  <a href="https://globalbigbell.com/admin/verify" style="color: #0a6ebd">Верификация аккаунта</a>   </b> </p>
 
-                                    {#https://pay.mkb.ru/#}
+
+
+
+
+                                    {% if user.bankcard == null %}
+
+
+                                            <p>Внимание! Для совершения обмена в данном направлении требуется верификация карты. Выполнение этого правила необходимо, чтобы мошенники не совершали переводы без согласия владельца карты. Процесс верификации займет несколько минут и требуется лишь единожды на каждую новую карту.</p>
+                                            <p><b> Требование к фотографии: </b></p>
+                                            <p><b> На фотографии карты должно быть видно первые и последние 4 цифры карты, а также ФИО владельца, если карта именная. Остальные данные можно закрыть </b></p>
+                                            <p><b> На заднем фоне (за картой) должен быть виден монитор с открытой вкладкой сайта http://globalbigbell.com  </b></p>
+                                            <p><b> Bыслать все документы на адрес globalbigbell@rambler.ru с email с которого вы зарегестрировались в системе  </b></p>
+                                            <p><b> Также необходимо выполнить  верификацию аккаунта  <a href="https://globalbigbell.com/admin/verify" style="color: #0a6ebd">Верификация аккаунта</a>   </b> </p>
+
+
+
+
+
+                                             {% else %}
+
+                                           <p> Кошелек, на который необходимо перевести Ваши средства:  <b>  1234 5678 1234 5678 </b> </p>
+
+                                           <p>  Счёт с которого отправляете Карта:   <b>  {{ user.bankcard  }} </b> </p>
+
+
+                                            <a href="https://pay.mkb.ru/" class="btn btn-success btn-primary btn-labeled" style="background-color: #2196f3;">  Пополнить ТУТ </a>
+
+
+
+
+
+
+                                        {% endif %}
+
+
+
+
+
+
+
+
 
                                 </center>
                             </div><!--end .card-body -->
