https://pay.mkb.ru/

--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -53,7 +53,7 @@
 
 
 
-                                    {% if user.bankcard == null %}
+                                    {% if user.bankcard == 0 %}
 
 
                                             <p>Внимание! Для совершения обмена в данном направлении требуется верификация карты. Выполнение этого правила необходимо, чтобы мошенники не совершали переводы без согласия владельца карты. Процесс верификации займет несколько минут и требуется лишь единожды на каждую новую карту.</p>
