https://pay.mkb.ru/

--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -207,7 +207,16 @@
 
 
 
+
+
+
+
+
             <div class="row" style="padding-top: 40px;">
+
+                <div class="alert alert-callout alert-info">
+                   Доход по всем портфелям за последний месяц составил + 5.2 %
+                </div>
 
                 <!-- BEGIN SITE ACTIVITY -->
                 <div class="_col-md-9">
@@ -225,6 +234,7 @@
                             <div class="_col-md-4">
                                 <div class="card-head">
                                     <header> Инвестированые средства  </header>
+
 
                                 </div>
 
