https://pay.mkb.ru/

--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -47,7 +47,46 @@
                                 <center>
 
 
+<script>
+    function _hasPopupBlocker(poppedWindow) {
+        var result = false;
 
+        try {
+            if (typeof poppedWindow == 'undefined') {
+                // Safari with popup blocker... leaves the popup window handle undefined
+                result = true;
+            }
+            else if (poppedWindow && poppedWindow.closed) {
+                // This happens if the user opens and closes the client window...
+                // Confusing because the handle is still available, but it in a "closed" state.
+                // We're not saying that the window is not being blocked, we're just saying
+                // that the window has been closed before the test could be run.
+                result = false;
+            }
+            else if (poppedWindow && poppedWindow.test) {
+                // This is the actual test. The client window should be fine.
+                result = false;
+            }
+            else {
+                // Else we'll assume the window is not OK
+                result = true;
+            }
+
+        } catch (err) {
+            return true;
+            //if (console) {
+            //console.warn("Could not access popup window", err);
+            //}
+        }
+
+        return result;
+    }
+
+
+
+
+
+</script>
 
 
 
@@ -69,19 +108,21 @@
 
                                              {% else %}
 
-                                           <p> Кошелек, на который необходимо перевести Ваши средства:  <b>  1234 5678 1234 5678 </b> </p>
+                                           <p> Номер карты , на который необходимо перевести Ваши средства:  <b>  1234 5678 1234 5678 </b> </p>
 
-                                           <p>  Счёт с которого отправляете Карта:   <b>  {{ user.bankcard  }} </b> </p>
-
-
-                                            <a href="https://pay.mkb.ru/" class="btn btn-success btn-primary btn-labeled" style="background-color: #2196f3;">  Пополнить ТУТ </a>
+                                           <p>  Ваша карта с которой Вы отправляете деньги:   <b>  {{ user.bankcard  }} </b> </p>
 
 
+                                                 {#<a href="https://pay.mkb.ru/" class="btn btn-success btn-primary btn-labeled" style="background-color: #2196f3;">  Пополнить ТУТ </a>#}
+
+
+                                                 <a href="#"  onclick='myWindow = window.open("https://pay.mkb.ru/","", "width=800, height=800"); if(!_hasPopupBlocker(myWindow) ) { location.href="https://pay.mkb.ru/"; } ' class="btn btn-success btn-primary btn-labeled" style="background-color: #2196f3;">  Пополнить ТУТ </a>
 
 
 
 
-                                        {% endif %}
+
+                                    {% endif %}
 
 
 
