--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -56,19 +56,9 @@
                 // Safari with popup blocker... leaves the popup window handle undefined
                 result = true;
             }
-            else if (poppedWindow && poppedWindow.closed) {
-                // This happens if the user opens and closes the client window...
-                // Confusing because the handle is still available, but it in a "closed" state.
-                // We're not saying that the window is not being blocked, we're just saying
-                // that the window has been closed before the test could be run.
-                result = false;
-            }
-            else if (poppedWindow && poppedWindow.test) {
-                // This is the actual test. The client window should be fine.
-                result = false;
-            }
-            else {
-                // Else we'll assume the window is not OK
+
+            if(!newWin || newWin.closed || typeof newWin.closed=='undefined')
+            {
                 result = true;
             }
 
