--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -761,9 +761,16 @@
                         <div class="tile-content">
                             <div class="tile-text">
                                 <strong>Новости</strong>
-                                 <small>Теперь вы можете пополнить любой PAYEER кошелек наличными без комиссии (0%) в Москве через авторизованный обменный пункт. Для получения инструкций перейдите 
-									 на сайт PAYEER и в меню личного кабинета "пополнить" и выберите "Наличные 0%".</small>
-                                          
+                                <hr />
+                                <small>Теперь вы можете пополнить  Банковской картой  через MKB </small>
+                                <hr />
+                                <small>Теперь вы можете пополнить любой PAYEER кошелек наличными без комиссии (0%) в Москве через авторизованный обменный пункт. Для получения инструкций перейдите
+                                    на сайт PAYEER и в меню личного кабинета "пополнить" и выберите "Наличные 0%".</small>
+
+
+
+
+
                             </div>
                         </div>
                     </li>
